审核通过的添加背景颜色

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,20 @@
   <div>
     <label for="autoMagic">请填入小组暗号</label>
     <textarea name="autoMagic" id="autoMagic" cols="30" rows="5"></textarea>
+    <div>
+<!-- 
+      <form>
+        <fieldset>
+
+          <legend> 匹配率 </legend>
+          <input type="radio" name="matchRate" id=""><label for="matchRate">75</label>
+          <input type="radio" name="matchRate" id=""><label for="matchRate">85</label>
+          <input type="radio" name="matchRate" id=""><label for="matchRate">95</label>
+          <input type="radio" name="matchRate" id=""><label for="matchRate">100</label>
+        </fieldset>
+      </form> -->
+
+    </div>
     <span class="desc">会自动过滤掉默认头像用户和默认昵称用户</span>
   </div>
   <button id="changeColor">一键审批</button>
