更新了匹配算法

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
     <span class="desc">会自动过滤掉默认头像用户和默认昵称用户</span>
   </div>
   <button id="changeColor">一键审批</button>
-  <script src="/js/popup.js"></script>
+  <script src="./js/popup.js"></script>
 </body>
 
 </html>
